# Koala

./: README.md  crawler.py  embeddings.pkl  main.py  pyproject.toml  requirements.txt  search_api.py  search_engine.py  static_server.py
frontend/: index.html  sw.js
frontend/css/: components.css  main.css  responsive.css
frontend/js/: api.js  app.js  config.js  utils.js
frontend/js/components/: analytics.js  navbar.js  search.js  toast.js  websites.js
