[project]
name = "koala"
version = "1.0.0"
description = "Modern semantic search engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.16.1",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "backcall==0.2.0",
    "beautifulsoup4==4.13.4",
    "bidict==0.23.1",
    "bleach==6.2.0",
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "docopt==0.6.2",
    "executing==2.2.0",
    "faiss-cpu==1.11.0",
    "fastapi==0.115.12",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "fsspec==2025.5.1",
    "granian==2.3.1",
    "greenlet==3.2.2",
    "h11==0.16.0",
    "hf-xet==1.1.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==0.32.0",
    "idna==3.10",
    "ipython==8.12.3",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "joblib==1.5.1",
    "jsonschema==4.23.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.7.2",
    "jupyterlab_pygments==0.3.0",
    "Mako==1.3.10",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "mpmath==1.3.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "networkx==3.4.2",
    "numpy==2.2.6",
    "packaging==25.0",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pickleshare==0.7.5",
    "pillow==11.2.1",
    "pipreqs==0.5.0",
    "platformdirs==4.3.8",
    "prompt_toolkit==3.0.51",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure_eval==0.2.3",
    "pydantic==2.11.5",
    "pydantic_core==2.33.2",
    "Pygments==2.19.1",
    "PyJWT==2.9.0",
    "python-dateutil==2.9.0.post0",
    "python-engineio==4.12.1",
    "python-multipart==0.0.20",
    "python-socketio==5.13.0",
    "PyYAML==6.0.2",
    "pyzmq==26.4.0",
    "redis==5.3.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "safetensors==0.5.3",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "sentence-transformers==4.1.0",
    "setuptools==80.8.0",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "SQLAlchemy==2.0.41",
    "sqlmodel==0.0.24",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.1",
    "torch==2.7.0",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.52.3",
    "triton==3.3.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.13.2",
    "urllib3==2.4.0",
    "uvicorn==0.34.2",
    "watchfiles==1.0.5",
    "wcwidth==0.2.13",
    "webencodings==0.5.1",
    "wrapt==1.17.2",
    "wsproto==1.2.0",
    "yarg==0.1.9"
]

[project.scripts]
koala-search = "static_server:main"
